# zhongwen

./: .gitignore  CHANGELOG.md  README.md  app.py  check_convert.py  convert_jsons_to_db.py  dbmodels.py  delete_char_strokes_for_user.py  delete_user.py  deploy  examples.json  extract_fontawesome_filter.py  filtered_icons.js  fire  fontawesome_unminified.js  get_characters_simple_info?characters=我  hanzi-tmux-osx.sh  hanzi-tmux.sh  hmmm.json  hsk2_cards.json  hsk6_cards.json  migrations.py  original_fontawesome_others_data.js  parsed_data.json  produce_similarity_lists.py  pyproject.toml  remove_strokes_from_db.py  requirements.txt  shas_class_cards.json  test.txt  transfer_stroke_data.py  version
backend/: common.py  decorators.py  flashcard_app.py  setup.py
data/: Task 1 中文写作.docx  anthropic.json  audio_mappings.json  decks.json  example_lists.json  examples.json  fill_in_puzzles.js  hanzi_darkness_kaiti.json  hanzi_darkness_noto.json  hsk1_cards.json  hsk2_cards.json  hsk3_cards.json  hsk4_cards.json  (+17 more)
hanzi-backend/: .gitignore  app.py  migrations.py  pyproject.toml  requirements.txt  version
hanzi-backend/backend/: anki.py  common.py  decorators.py  setup.py
hanzi-backend/backend/db/: fsrs_ops.py  models.py  ops.py
hanzi-backend/backend/routes/: api.py  fsrs.py  google_auth.py  manage.py  puzzles.py
hanzi-backend/migrations/versions/: 0e8a9843eeca_add_user_custom_definition.py  27da3360b9a8_initial.py  645e4415f4b8_add_fsrs_review_log.py  998223d88e06_add_rating_tallies_and_time_ms_to_fsrs_.py  a4adfa5bf416_add_fsrs_review_tables.py  cf9d81fa5734_add_review_duration_to_fsrs_review_log.py  d14093709a33_metainfo.py
hanzi-backend/static/css/: common.css  contextmenu.css  flashcard.css  flashcard_expanded.css  grid.css  hanzistats.css  hanzitest_audio.css  hanzitest_choices.css  hanzitest_draw.css  home.css  kongzi.css  lists.css  search.css
hanzi-backend/static/js/: account.js  app.js  app_vue.js  border.js  contextmenu.js  darkmode.js  flashcard.js  grid.js  hamburger.js  hanziquiz.js  hanzitest_choices.js  hanzitest_draw.js  hanzitest_table.js  plotter_better.js  search.js
hanzi-backend/static/js/routes/: account.js  grid.js  hanziwriting.js  home.js  login.js  pageinfo.js  puzzle_audio.js  puzzle_choice.js  puzzle_table.js  puzzles.js  register.js  search.js
hanzi-backend/static/json/: carddecks_w_pinyin.json
hanzi-backend/templates/: account.html  book1.html  convert3.html  grid.html  index.html  index_vue.html  kofi.html  kongzi.html  login.html  register.html  search.html  strokerender.html
hanzi-backend/templates/account_management/: account_management.html  email_management.html
hanzi-backend/templates/puzzles/: hanzitest_choices.html  hanzitest_fillin.html
hanzi-search/: app.py  pyproject.toml
(+485 files in other folders)
