[tool.poetry]
name = "hanzi-backend"
version = "0.1.0"
description = "Flask backend for Hanzi app"
authors = ["Paolo <paolo@patakk.xyz>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
Flask-SQLAlchemy = "*"
Flask-Limiter = "*"
Flask-WTF = "*"
Flask-Migrate = "*"
flask-mail = "*"
python-dateutil = "*"
pypinyin = "*"
Pillow = "*"
requests = "*"
regex = "*"
jieba = "*"
hanziconv = "*"
nltk = "*"
flask-dance = "*"
rapidfuzz = "*"
Flask-Session = "*"
flask-cors = "*"
genanki = "*"
gunicorn = "^23.0.0"
